---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2025-04-7
  Bugfixes:
    - Fixed planet tech icon
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025-04-3
  Changes:
    - Rebalanced recipes with rich teseract as an ingredient
  Tweaks:
    - Added new planet icon in better resolution 
  Bugfixes:
    - Fixed Igrys Ruins appearing on Nauvis
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-04-2
  Features:
    - Copper Machines work only at night
    - New Ruins can be found on the planet
  Changes:
    - Made Copper Machines faster to compensate for the night-only operation
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025-04-2
  Compatibility:
    - Added setting to integrate with modded science packs
      By default the mod will only enrich vanilla and Igrys's science packs
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-04-1
  Compatibility:
    - Fixed compatibility with Janus and Alien Biomes
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025-03-31
  Major Features:
    - Initial release of the mod.