@@ -9,5 +9,10 @@ data:extend({
         name = "igrys-enhance-modded-science-packs",
         setting_type = "startup",
         default_value = false
+    }, {
+        type = "bool-setting",
+        name = "igrys-steal-spidertron",
+        setting_type = "startup",
+        default_value = true
     }
 })
